fix broken styles

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,7 +16,6 @@ main {
   padding: 1rem;
   height: calc(100vh - 4rem);
   justify-content: space-between;
-  justify-content: space-between;
 }
 
 .header-box {
@@ -44,10 +43,6 @@ main {
 .header h1 {
   font-size: 1.5rem;
   letter-spacing: -0.025em;
-}
-
-.header img {
-  cursor: pointer;
 }
 
 .search-bar {
@@ -88,13 +83,9 @@ main {
 .sidebar {
   position: relative;
   height: 100%;
-  position: relative;
-  height: 100%;
   background-color: rgb(227, 223, 215);
   width: 20vw;
-  width: 20vw;
   color: rgb(46, 46, 46);
-  border-radius: 0.5em;
   border-radius: 0.5em;
   display: flex;
   flex-direction: column;
@@ -104,7 +95,6 @@ main {
   overflow-y: scroll;
   animation: 1s ease-in 0s 1 slideInFromRight;
 }
-
 
 .sidebar h1 {
   width: 100%;
@@ -165,7 +155,7 @@ main {
   background-color: #eee;
 }
 
-.container.radio .checkmark{
+.container.radio .checkmark {
   position: absolute;
   top: 0;
   left: 0;
@@ -180,7 +170,8 @@ main {
   border-radius: 5px;
 }
 
-.container:hover input ~ .checkmark, .container.radio :hover input ~ .checkmark{
+.container:hover input ~ .checkmark,
+.container.radio :hover input ~ .checkmark {
   background-color: #ccc;
 }
 
@@ -190,7 +181,7 @@ main {
 }
 
 .container.radio input:checked ~ .checkmark {
-  background-color: #2196F3;
+  background-color: #2196f3;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
@@ -234,11 +225,11 @@ main {
   border-radius: 5px;
 }
 
-.tag{
+.tag {
   font-size: 12px;
   background-color: rgb(179, 179, 179);
   margin: 0;
-  padding: .5em .75em;
+  padding: 0.5em 0.75em;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -246,8 +237,8 @@ main {
   width: fit-content;
 }
 
-.tag .remove{
-  margin-left: .5em;
+.tag .remove {
+  margin-left: 0.5em;
   height: 12px;
   width: 12px;
   background-color: #222222;
@@ -355,13 +346,19 @@ main {
   margin: 1.75rem;
   padding: 1rem;
   color: #000;
-  max-width: 384px;
+  width: 384px;
   border-radius: 0.375rem;
   gap: 1rem;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
   max-height: 83vh;
+}
+
+.place-card-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .place-card h1 {
@@ -375,7 +372,7 @@ main {
   gap: 0.5rem;
 }
 
-.pollen-forecasts {
+.place-card-data {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -387,13 +384,13 @@ main {
   gap: 0.75rem;
 }
 
-.pollen-info {
+.place-card-section-data {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.pollen-type-card {
+.place-sub-card {
   padding: 0.75rem;
   border: 1px solid #000;
   border-radius: 0.5rem;
@@ -402,12 +399,12 @@ main {
     0 8px 10px -6px rgb(0 0 0 / 0.1);
 }
 
-.pollen-type-card-header {
+.place-sub-card-header {
   display: flex;
   justify-content: space-between;
 }
 
-.pollen-type-card-header span {
+.place-sub-card-header span {
   font-weight: 500;
 }
 
